salti/src/ui/snapshots/salti__ui__render__tests__failed.snap
---
source: salti/src/ui/render.rs
expression: "render_text(None, &ui)"
---
                          File: Unknown | Status: Failed | 0 alignments | Length: 0 | Positions: 0-0










                                   Failed to load alignment: boom
