salti/src/ui/snapshots/salti__ui__render__tests__idle.snap
---
source: salti/src/ui/render.rs
expression: "render_text(None, &ui_state())"
---
                            File: Unknown | Status: Idle | 0 alignments | Length: 0 | Positions: 0-0









                            salti: A modern MSA browser for the terminal.
                            Use the command palette to open an alignment.

                             Hint: use :load-alignment <alignment.fasta>
