salti/src/ui/snapshots/salti__ui__render__tests__notification.snap
---
source: salti/src/ui/render.rs
expression: "render_text(Some(&session), &ui)"
---
                        File: Unknown | Status: Loaded | 2 alignments | Length: 18 | Positions: 1-18
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│                  │1       10                                                                     │
│                  │.   .    |    .                                                                │
│1 seq1            │CATCATCATCATCATCAT                                                             │
│2 seq2            │CATCATCATCATCATCAT                                                             │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
├──────────────────┼───────────────────────────────────────────────────────────────────────────────┤
│Reference Sequence│No reference selected.                                                         │
│Consensus Sequence│CATCATCATCATCATCAT                                                             │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘

Loaded alignment
