salti/src/ui/snapshots/salti__ui__render__tests__palette.snap
---
source: salti/src/ui/render.rs
expression: "render_text(Some(&session), &ui)"
---
                     File: test.fasta | Status: Loaded | 2 alignments | Length: 18 | Positions: 1-18
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│                  │1       10                                                                     │
│                  │.   .    |    .                                                                │
│1 seq1            │CATCATCATCATCATCAT                                                             │
│2 seq2            │CATCATCATCATCATCAT                                                             │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
jump-position            clear-all-filters        toggle-protein-view      set-translation-frame
jump-sequence            filter-gaps              check-update             set-theme
jump-feature             filter-constant          quit                     set-sequence-type
pin-sequence             set-reference            set-diff-mode            load-gff
unpin-sequence           clear-reference          load-alignment
filter-rows              toggle-translation-ove...set-consensus-method
:█
