salti/src/ui/snapshots/salti__ui__render__tests__render_loaded_basic.snap
---
source: salti/src/ui/render.rs
assertion_line: 474
expression: "render_text(Some(&alignment), &ui, &metrics, area)"
---
                        File: Unknown | Status: Loaded | 4 alignments | Length: 18 | Positions: 1-18
┌Sequence Name─────┬Alignment──────────────────────────────────────────────────────────────────────┐
│                  │1       10                                                                     │
│                  │.   .    |    .                                                                │
│1 seq1            │CATCATCATCATCATCAT                                                             │
│2 seq2            │CATCATGATCATCATCAT                                                             │
│3 seq3            │CATCATCATCATGATCAT                                                             │
│4 seq4            │CATCATCATCATCATCAT                                                             │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
├──────────────────┼───────────────────────────────────────────────────────────────────────────────┤
│Reference Sequence│No reference selected                                                          │
│Consensus Sequence│CATCATCATCATCATCAT                                                             │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
