salti/src/ui/snapshots/salti__ui__render__tests__render_loaded_translation.snap
---
source: salti/src/ui/render.rs
assertion_line: 505
expression: "render_text(Some(&alignment), &ui, &metrics, area)"
---
                        File: Unknown | Status: Loaded | 2 alignments | Length: 18 | Positions: 1-18
┌Sequence Name─────┬Alignment──────────────────────────────────────────────────────────────────────┐
│                  │1       10                                                                     │
│                  │.   .    |    .                                                                │
│2 seq2            │ .  .  D  .  .  .                                                              │
│3 seq3            │ .  .  .  .  D  .                                                              │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
├──────────────────┼───────────────────────────────────────────────────────────────────────────────┤
│Reference Sequence│ H  H  H  H  H  H                                                              │
│Consensus Sequence│ H  H  H  H  H  H                                                              │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
                                                                                Translation frame: 1
